feat: non-blocking webclient